update: lint:js, lint:js:dry npm scripts を新たに追加. 今後css 等の別のファイルについてlint したい場合に run-p lint:js lint:css のように柔軟に追加できるようにするため

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "eslint:fix": "yarn eslint src/js --fix",
     "eslint:fix:dry": "yarn eslint src/js --fix-dry-run",
     "lint": "yarn lint:all",
-    "lint:all": "run-s prettier:fix eslint:fix",
-    "lint:all:dry": "run-s prettier:fix:dry eslint:fix:dry",
+    "lint:all": "yarn lint:js",
+    "lint:all:dry": "yarn lint:js:dry",
+    "lint:js": "run-s prettier:fix eslint:fix",
+    "lint:js:dry": "run-s prettier:fix:dry eslint:fix:dry",
     "//": "escape \"yarn lint\" for windows",
     "lint:watch": "watch \"yarn lint:all\" src/js",
     "precommit": "lint-staged",
