add: add prettier:watch:config script for wating root configs file in real time

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "precommit": "lint-staged",
     "prettier:fix": "yarn prettier --write src/js/**/*.js",
     "prettier:fix:dry": "yarn prettier --list-different src/js/**/*.js",
+    "prettier:watch:config": "cat .gitignore .prettierignore > tmp/._prettierignore & watch \"yarn prettier --write * --ignore-path tmp/._prettierignore\" .",
     "watch": "yarn watch:all",
     "watch:all": "yarn run-p lint:watch webpack:watch",
     "webpack:watch": "yarn webpack --watch"
