update: add format:lint:watch:all script.
so must update npm script useable, example lint, prettier,
prettier:watch

--- a/package.json
+++ b/package.json
@@ -4,20 +4,35 @@
     "babel:watch": "yarn babel src/js --watch --out-dir lib --source-maps inline",
     "eslint:fix": "yarn eslint src/js --fix",
     "eslint:fix:dry": "yarn eslint src/js --fix-dry-run",
+    "// [add csslint:fix, csslint:fix:dry]": "can add files like css",
+    "// [describe format:lint:watch:all]": "trigger all files are formatted and linted in realtime",
+    "format:lint:watch:all": "yarn lint:watch:all",
     "lint": "yarn lint:all",
-    "lint:all": "yarn lint:js",
-    "lint:all:dry": "yarn lint:js:dry",
-    "lint:js": "run-s prettier:fix eslint:fix",
-    "lint:js:dry": "run-s prettier:fix:dry eslint:fix:dry",
+    "lint:all": "run-p lint:*:fix",
+    "lint:all:dry": "run-p lint:*:fix:dry",
+    "lint:config:fix": "yarn prettier:config:fix",
+    "lint:config:fix:dry": "yarn prettier:config:fix:dry",
+    "lint:js:fix": "run-s prettier:js:fix eslint:fix",
+    "lint:js:fix:dry": "run-s prettier:js:fix:dry eslint:fix:dry",
+    "// [add lint:css:fix, lint:css:fix:dry]": "can add files like css",
     "//": "escape \"yarn lint\" for windows",
-    "lint:watch": "watch \"yarn lint:all\" src/js",
+    "lint:watch": "yarn lint:watch:all",
+    "lint:watch:all": "cat .gitignore .prettierignore > tmp/._prettierignore & watch \"yarn lint:all\" .",
     "precommit": "lint-staged",
-    "prettier:fix": "yarn prettier --write src/js/**/*.js",
-    "prettier:fix:dry": "yarn prettier --list-different src/js/**/*.js",
-    "prettier:watch": "yarn prettier:watch:config",
-    "prettier:watch:config": "cat .gitignore .prettierignore > tmp/._prettierignore & watch \"yarn prettier --write * --ignore-path tmp/._prettierignore\" .",
+    "prettier:all": "run-p prettier:*:fix",
+    "prettier:all:dry": "run-p prettier:*:fix:dry",
+    "prettier:config:fix": "yarn prettier --write * --ignore-path tmp/._prettierignore",
+    "prettier:config:fix:dry": "yarn prettier --list-different * --ignore-path tmp/._prettierignore",
+    "prettier:js:fix": "yarn prettier --write src/js/**/*.js",
+    "prettier:js:fix:dry": "yarn prettier --list-different src/js/**/*.js",
+    "// [add prettier:css:fix prettier:css:fix:dry]": "can add files like css",
+    "prettier:watch": "yarn prettier:watch:all",
+    "prettier:watch:all": "run-p prettier:watch:*:fix",
+    "prettier:watch:config:fix": "cat .gitignore .prettierignore > tmp/._prettierignore & watch \"yarn prettier:config:fix\" .",
+    "prettier:watch:js:fix": "watch \"yarn prettier:js:fix\" src/js --interval=1",
+    "// [add prettier:watch:css:fix]": "can add files like css",
     "watch": "yarn watch:all",
-    "watch:all": "yarn run-p prettier:watch lint:watch webpack:watch",
+    "watch:all": "yarn run-p format:lint:watch:all webpack:watch",
     "webpack:watch": "yarn webpack --watch"
   },
   "lint-staged": {
