--- a/.prettierignore
+++ b/.prettierignore
@@ -3,6 +3,7 @@ tmp/
 
 # TODO: No parser could be inferred for file: と表示されずに，整形する方法を模索
 .editorconfig
+.eslintignore
 .gitignore
 
 # ignore files bacause webpack does uglify
