fix: yarn dev:ignore:all:sanitize calls yarn dev:ignore:all

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "babel:watch": "yarn babel src/js/**/*.js --watch --out-dir lib --source-maps inline",
     "dev:ignore:all": "run-p dev:ignore:*:fake",
     "// HACK dev:ignore:all:sanitize": "& : を加えたのは，lint-staged からくるファイル名の引数を排除するため(& : path/to/file)",
-    "dev:ignore:all:sanitize": "yarn dev:ignore:all:sanitize & : ",
-    "dev:ignore:eslint:fake": "cat .gitignore .prettierignore .eslintignore > tmp/._eslintignore & echo ",
-    "dev:ignore:prettier:fake": "cat .gitignore .prettierignore > tmp/._prettierignore & echo ",
+    "dev:ignore:all:sanitize": "yarn dev:ignore:all & : ",
+    "dev:ignore:eslint:fake": "cat .gitignore .prettierignore .eslintignore > tmp/._eslintignore & : ",
+    "dev:ignore:prettier:fake": "cat .gitignore .prettierignore > tmp/._prettierignore & : ",
     "dev:watch": "yarn watch:all",
     "eslint:fix": "yarn eslint src/js/**/*.js --fix",
     "eslint:fix:dry": "yarn eslint src/js/**/*.js --fix-dry-run",
