--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "scripts": {
     "babel:compile": "yarn babel src/js/**/*.js --out-dir lib --source-maps inline",
     "babel:watch": "yarn babel src/js/**/*.js --watch --out-dir lib --source-maps inline",
-    "dev:ignore:all": "run-p dev:ignore:*:fake",
+    "dev:ignore:all": "run-p dev:ignore:*:cat",
     "// HACK dev:ignore:all:sanitize": "& : を加えたのは，lint-staged からくるファイル名の引数を排除するため(& : path/to/file)",
     "dev:ignore:all:sanitize": "yarn dev:ignore:all & : ",
-    "dev:ignore:eslint:fake": "cat .gitignore .prettierignore .eslintignore > tmp/._eslintignore & : ",
-    "dev:ignore:prettier:fake": "cat .gitignore .prettierignore > tmp/._prettierignore & : ",
+    "dev:ignore:eslint:cat": "cat .gitignore .prettierignore .eslintignore > tmp/._eslintignore & : ",
+    "dev:ignore:prettier:cat": "cat .gitignore .prettierignore > tmp/._prettierignore & : ",
     "dev:watch": "yarn watch:all",
     "eslint:fix": "yarn eslint src/js/**/*.js --fix",
     "eslint:fix:dry": "yarn eslint src/js/**/*.js --fix-dry-run",
