feat: add stash-unstaged and pop-stash npm-scirpts
for users who use git add -p, however lint-staged run git add
so, user must stash and pop before commit

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "//": "escape \"yarn lint\" for windows",
     "lint:watch": "yarn lint:watch:all",
     "lint:watch:all": "watch \"yarn lint:all\" .",
+    "pop-stash": "git stash && git stash pop stash@{1} && git read-tree stash && git stash drop",
     "prettier:all": "run-p prettier:*:fix",
     "prettier:all:dry": "run-p prettier:*:fix:dry",
     "prettier:config:fix": "yarn prettier --write * --ignore-path tmp/._prettierignore",
@@ -36,6 +37,7 @@
     "prettier:watch:all": "run-p prettier:watch:*:fix",
     "prettier:watch:config:fix": "watch \"yarn prettier:config:fix\" .",
     "prettier:watch:js:fix": "watch \"yarn prettier:js:fix\" src/js --interval=1",
+    "stash-unstaged": "git stash save -k 'pre-linting-stash' >> /dev/null",
     "// [add prettier:watch:css:fix]": "can add files like css",
     "watch": "yarn watch:all",
     "watch:all": "yarn run-p format:lint:watch:all webpack:watch",
